--- a/requirements.txt
+++ b/requirements.txt
@@ -3,19 +3,26 @@ blinker==1.9.0
 click==8.1.8
 colorama==0.4.6
 coverage==7.2.7
+Deprecated==1.2.18
 flake8==6.1.0
 Flask==3.1.0
+Flask-Limiter==3.10.1
+Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
 iniconfig==2.0.0
 isort==5.12.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
+limits==4.0.1
 mando==0.7.1
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mccabe==0.7.0
+mdurl==0.1.2
 mypy-extensions==1.0.0
 numpy==2.2.1
+ordered-set==4.1.0
 packaging==24.2
 pandas==2.2.3
 pathspec==0.12.1
@@ -23,12 +30,15 @@ platformdirs==4.3.6
 pluggy==1.5.0
 pycodestyle==2.11.1
 pyflakes==3.1.0
+Pygments==2.19.1
 pytest==7.4.3
 python-dateutil==2.9.0.post0
 pytz==2024.2
 radon==6.0.1
+rich==13.9.4
 six==1.17.0
 SQLAlchemy==2.0.37
 typing_extensions==4.12.2
 tzdata==2024.2
 Werkzeug==3.1.3
+wrapt==1.17.2
