--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 black==23.10.1
 blinker==1.9.0
+chardet==5.2.0
 click==8.1.8
 colorama==0.4.6
 coverage==7.2.7
@@ -26,6 +27,7 @@ ordered-set==4.1.0
 packaging==24.2
 pandas==2.2.3
 pathspec==0.12.1
+pillow==11.1.0
 platformdirs==4.3.6
 pluggy==1.5.0
 pycodestyle==2.11.1
@@ -35,6 +37,7 @@ pytest==7.4.3
 python-dateutil==2.9.0.post0
 pytz==2024.2
 radon==6.0.1
+reportlab==4.2.5
 rich==13.9.4
 six==1.17.0
 SQLAlchemy==2.0.37
