--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
           matrix:
-            python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+            python-version: ["3.9", "3.12", "3.13"]
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
@@ -26,6 +26,6 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install requirements.txt
+          python -m pip install -r requirements.txt
       - name: Run Pytest
         run: pytest
